cleaned up code

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -10,7 +10,7 @@
     <div>
         <h2>dom manipulation practice</h2>
         <section id="to-do">
-            To do list:
+           cat list:
         </section>
         <button id="displayBtn">show cats</button>
     </div>
