display data from fetch call

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -14,6 +14,11 @@
         </section>
         <button id="displayBtn">show cats</button>
     </div>
+    <div>
+        <section id="post-section">
+            <button id="'post-btn">show posts</button>
+        </section>
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
