--- a/dino-game-clone/index.html
+++ b/dino-game-clone/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    
+    <div id="game">
+        <div id="game"></div>
+        <div id="cactus"></div>
+    </div>
+    <script src="./script.js"></script>
 </body>
 </html>
