--- a/dino-game-clone/index.html
+++ b/dino-game-clone/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="game">
-        <div id="game"></div>
+        <div id="dino"></div>
         <div id="cactus"></div>
     </div>
     <script src="./script.js"></script>
