--- a/errhandling/index.html
+++ b/errhandling/index.html
@@ -13,8 +13,16 @@
             <h2>first err</h2>
 
         </div>
-        <div class='container' id="err2">
-            <h2>other err</h2>
+        <div class='container' id="form-container">
+            <h2>form err</h2>
+            <form id="form">
+                <label for="username">Name: </label>
+                <input id="username" name="username" type="text" required>
+                <label for="password">Password: </label>
+                <input id="password" name="password" type="text" required>
+                <button type="submit">submit</button>
+                <div id="err2"></div>
+            </form>
         </div>
         <div class='container' id="err3-fetch">
             <h2>fetch data</h2>
